# eventcam_bias_GUI

./: CMakeLists.txt  README.md  biases.json
include/: camera_global.hpp  eventoViewer.hpp  menuGUI.hpp
src/: eventoViewer.cpp  main.cpp  menuGUI.cpp
